--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,6 @@ project(MyCUDAProject LANGUAGES CXX CUDA)
 # Укажите минимальную версию C++ и CUDA
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
-
+message(STATUS "C++ Compiler: ${CMAKE_CXX_COMPILER}")
 # Добавьте исходные файлы
 add_executable(CudaEntropy main.cu lib.cuh)
